Switching to Spring Boot 2.7.18